@@ -1,4 +1,8 @@
 2010-04-28  Kirit Saelensminde  <kirit@felspar.com>
+ Threading
+ - Added accessors to future so that we can see if there is an exception or a if future (result) is available.
+
+2010-04-28  Kirit Saelensminde  <kirit@felspar.com>
  Basic library handling
  - Added fost/relops.hpp and started to use it to remove a lot of duplicated code.
 
